--- a/notebooks/Bias_grid.ipynb
+++ b/notebooks/Bias_grid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -1272,7 +1272,111 @@
    },
    "outputs": [],
    "source": [
-    "# final_observations.to_file(\"../data/bias_grid/final_observations\", driver=\"ESRI Shapefile\")"
+    "final_observations.to_file(\"../data/bias_grid/final_observations\", driver=\"ESRI Shapefile\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from geopandas import GeoDataFrame\n",
+    "final_observations = GeoDataFrame.from_file(\"../data/bias_grid/final_observations/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>basisofrec</th>\n",
+       "      <th>eventdate</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>species</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>2007-01-29T23:00:00.000+0000</td>\n",
+       "      <td>POINT (30.1543 0.0581)</td>\n",
+       "      <td>Haplochromis elegans</td>\n",
+       "      <td>2007.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>2007-01-27T23:00:00.000+0000</td>\n",
+       "      <td>POINT (29.9497 -0.1893)</td>\n",
+       "      <td>Haplochromis elegans</td>\n",
+       "      <td>2007.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>2007-01-28T23:00:00.000+0000</td>\n",
+       "      <td>POINT (30.0797 0.0562)</td>\n",
+       "      <td>Haplochromis elegans</td>\n",
+       "      <td>2007.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>2007-01-31T23:00:00.000+0000</td>\n",
+       "      <td>POINT (30.1871 -0.0805)</td>\n",
+       "      <td>Haplochromis elegans</td>\n",
+       "      <td>2007.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>2006-11-21T23:00:00.000+0000</td>\n",
+       "      <td>POINT (30.1448 0.0567)</td>\n",
+       "      <td>Haplochromis elegans</td>\n",
+       "      <td>2006.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          basisofrec                     eventdate                 geometry  \\\n",
+       "0  HUMAN_OBSERVATION  2007-01-29T23:00:00.000+0000   POINT (30.1543 0.0581)   \n",
+       "1  HUMAN_OBSERVATION  2007-01-27T23:00:00.000+0000  POINT (29.9497 -0.1893)   \n",
+       "2  HUMAN_OBSERVATION  2007-01-28T23:00:00.000+0000   POINT (30.0797 0.0562)   \n",
+       "3  HUMAN_OBSERVATION  2007-01-31T23:00:00.000+0000  POINT (30.1871 -0.0805)   \n",
+       "4  HUMAN_OBSERVATION  2006-11-21T23:00:00.000+0000   POINT (30.1448 0.0567)   \n",
+       "\n",
+       "                species    year  \n",
+       "0  Haplochromis elegans  2007.0  \n",
+       "1  Haplochromis elegans  2007.0  \n",
+       "2  Haplochromis elegans  2007.0  \n",
+       "3  Haplochromis elegans  2007.0  \n",
+       "4  Haplochromis elegans  2006.0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_observations.head()"
    ]
   },
   {
@@ -1298,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -1312,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -1323,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -1336,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -1347,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -1358,7 +1462,7 @@
        "42918"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -1380,7 +1484,7 @@
        "27.154546609018681"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -1402,7 +1506,7 @@
        "1939676"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -1424,7 +1528,7 @@
        "True"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1445,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -1453,23 +1557,24 @@
     {
      "data": {
       "text/plain": [
-       "4.632639475428074"
+       "4.6326495944788775"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bias_grid_log = np.log10(bias_grid)\n",
-    "bias_grid_log[np.isneginf(bias_grid_log)] = 0 # is this a good idea, setting to 0? log10(0) = infinity otherwise\n",
+    "bias_grid_plus_1 = bias_grid + 1\n",
+    "bias_grid_log = np.log10(bias_grid_plus_1)\n",
+    "# bias_grid_log[np.isneginf(bias_grid_log)] = 0 # is this a good idea, setting to 0? log10(0) = infinity otherwise\n",
     "bias_grid_log.max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -1480,7 +1585,7 @@
        "0.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1491,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -1499,10 +1604,10 @@
     {
      "data": {
       "text/plain": [
-       "0.065801439687355634"
+       "0.068864864283790544"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -1531,7 +1636,7 @@
        "1580.5011495129977"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1543,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -1554,7 +1659,7 @@
        "-0.007655069506184338"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1576,7 +1681,7 @@
        "1.0000000000000238"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1594,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -1605,7 +1710,7 @@
        "1.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1617,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -1628,7 +1733,7 @@
        "0.0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1639,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1650,7 +1755,7 @@
        "0.00063270764269115793"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1695,6 +1800,220 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(bias_grid, open(\"../data/bias_grid/bias_grid.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41881"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.count_nonzero(bias_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9331200"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.product(bias_grid.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004488275891632373"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "41881/9331200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2160, 4320)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bias_grid.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import rasterio\n",
+    "from rasterio.transform import Affine\n",
+    "x_min, y_min, x_max, y_max = -180, -90, 180, 90\n",
+    "pixel_size = 0.083333333\n",
+    "x_res = int((x_max - x_min) / pixel_size)\n",
+    "y_res = int((y_max - y_min) / pixel_size)\n",
+    "crs = {'init': \"EPSG:4326\"}\n",
+    "transform = Affine.translation(x_min, y_max) * Affine.scale(pixel_size, -pixel_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with rasterio.open(\"../data/bias_grid/bias_grid_minmax_scale.tif\", 'w', driver='GTiff', width=x_res, height=y_res,\n",
+    "                   count=1,\n",
+    "                   dtype=np.uint16,\n",
+    "                   nodata=0,\n",
+    "                   transform=transform,\n",
+    "                   crs=crs) as out:\n",
+    "    out.write(bias_grid_minmax_scale.astype(np.uint16), indexes=1)\n",
+    "    out.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.083333333"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pixel_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00063270764269115793"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bias_grid_minmax_scale.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(bias_grid_log, open(\"../data/bias_grid/bias_grid_log.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pickle.dump(bias_grid_standardized, open(\"../data/bias_grid/bias_grid_standardized.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pickle.dump(bias_grid_minmax_scale, open(\"../data/bias_grid/bias_grid_minmax_scale.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -1708,6 +2027,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
